<resources>
    <string name="app_name">悦心运动</string>


    <!--首页模块-->
    <string name="name_index">首页</string>


    <!--食物模块，包括商业推广-->
    <string name="name_food">食物</string>


    <!--跑步模块-->
    <string name="name_running">跑步</string>

    <!--发现模块-->
    <string name="name_discover">发现</string>


    <!--个人模块-->
    <string name="name_mine">我的</string>
    <string name="title_activity_login">登陆</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆或者注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">电话号码不正确</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">必填</string>
    <string name="permission_rationale">"需要读取通讯录"</string>
</resources>
